Fixed a bug that the bg-image can be seen behind the profile image

--- a/public/assets/web/css/custom.css
+++ b/public/assets/web/css/custom.css
@@ -26,6 +26,7 @@
 
 #gg .msg-box .msg-box-img li {
   background: url(../images/gg1/man.svg) no-repeat center center;
+  background-size: contain;
 }
 
 .list-name {
